--- a/artwork/templates/portfolio/home.html
+++ b/artwork/templates/portfolio/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'portfolio/indexStyle.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'portfolio/homeStyle.css' %}" />
    
 
 <div class="main">
