--- a/artwork/static/portfolio/aboutStyle.css
+++ b/artwork/static/portfolio/aboutStyle.css
@@ -8,27 +8,25 @@ section{
 
 .simpleBorder img{
     margin: 5px;
-
     background-color: rgba(51, 92, 51, 0.301);
     border: 2px inset rgba(0, 0, 0, 0.2);
     padding: 5px;
 }
-p.simpleBorder{
+.simpleBorder{
     font-family: fantasy;
     font-size: 16px;
-    padding: 20px;
-    width: 80%;
-    margin-left: 10%;
+    padding: 10px;
 }
 
 aside{
-    flex: 1; 
+    flex: .7;
     margin-left: 10px;
 }
 article{
     flex: 1.7;
-    margin-left: 40px;
-    text-align: center;
+    margin-left: 10px;
+    margin-right: 40px;
+
 }
 
 .title{
@@ -43,4 +41,5 @@ article{
     max-width: 1000px;
     font-family: fantasy;
     font-size: 14px;
+    margin-right: 10px;
 }
