--- a/artwork/static/portfolio/portfolioStyle.css
+++ b/artwork/static/portfolio/portfolioStyle.css
@@ -1,5 +1,3 @@
-
-
 li{
     float: left;
     margin-left: 10px;
@@ -30,21 +28,28 @@ li{
     grid-row-gap: 25px;
 }
 
-.pictures img{
-    border: 2px inset rgba(0, 0, 0, 0.2);
+.picture img{
     position: relative;
     display: inline-block;
     cursor: pointer;
-    height: 300px;;
+    max-height: 200px;
+    margin: 10px;
+}
 
-    
+.picture video{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    max-height: 200px;
+    margin: 10px;
 }
 
 .singlePicture{
     list-style-type: none;
 }
 
-.singlePicture:active .notes{
+
+.col-md:active .notes{
     position: absolute;
     text-align: left;
     background-color:  rgb(199, 226, 207);
@@ -56,7 +61,96 @@ li{
     display: block;
 }
 
-
 .singlePicture #title{
     margin: 5px;
+}
+
+.hover-shadow {
+    cursor: pointer;
+    transition: 0.3s;
+    height: 200px;
+
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding: 25px;
+    left: 0;
+    top: 0;
+     /* Full width */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,.8); /* Black w/ opacity */
+    cursor: pointer;
+}
+
+#wholeContainer{
+    width: 100vw;
+}
+
+.modal-content {
+    cursor: default;
+    position: relative;
+    margin: auto;
+    padding: 0;
+    display:inline-block;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+    width: auto;
+    background-color:  rgb(199, 226, 207);
+
+}
+
+.modal-footer {
+    background-color: rgb(199, 226, 207);
+    justify-content: center;
+    border-top: 0;
+}
+
+.modal-body{
+    width: auto;
+    background-color: rgb(199, 226, 207);
+    border-bottom: 0;
+}
+
+.modal-content img{
+    overflow: auto;
+    max-height: 80vh;
+    min-height: 400px;
+    max-width: 85vw;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.modal-content video{
+    overflow: auto;
+    max-height: 80vh;
+    min-height: 400px;
+    max-width: 85vw;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+@media only screen and (max-width: 500px){
+    .modal-content {
+        width: 100%;
+    }
+}
+
+@media (min-width: 900px){
+    .container{
+    max-width: 1280px;
+        margin-right: 80px;
+    }
 }
