--- a/artwork/templates/portfolio/portfolio.html
+++ b/artwork/templates/portfolio/portfolio.html
@@ -1,4 +1,4 @@
-{% extends "baseIndex.html" %}
+{% extends "bootStrapBase.html" %}
   
 {% block content %}
 
@@ -9,8 +9,10 @@
         <p id='instructions'>
             Click on an image to find out more about it.
         </p>  
-        {% if image_list %} 
-            {% regroup image_list by get_medium_display as medium_list %}
+        {% if image_list %}
+            {{ image_list }}
+            {% regroup image_list|dictsort:image_list.medium by get_medium_display as medium_list %}
+            {{ medium_list }}
             {% for medium in medium_list %}
                 <div class="pictureClass">
                     <h3>{{ medium.grouper }}</h3>
