--- a/templates/bootStrapBase.html
+++ b/templates/bootStrapBase.html
@@ -64,7 +64,7 @@
 
         </body>
     <footer>
-        Katie Oliphant - L'artiste Fanée  
+        Katie Oliphant 2018
     </footer>
 </html>
  
